.happypack/s-539708221
SyntaxError: Unexpected token, expected , (43:17)

  41 |     getCompanies: PropTypes.func.isRequired,
  42 |     companies: PropTypes.array,
> 43 |     initialValues> PropTypes.array,
     |                  ^
  44 |     //reformattedOptions: PropTypes.array,
  45 |   }
  46 | 

Error
    at transpile (/Users/pavel/Development/demander/demander-frontend/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/pavel/Development/demander/demander-frontend/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/pavel/Development/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/pavel/Development/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/pavel/Development/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:274:9
    at /Users/pavel/Development/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:330:17
    at Object.callback (/Users/pavel/Development/demander/demander-frontend/node_modules/happypack/lib/fnOncePedantic.js:10:15)
    at Object.module.exports (/Users/pavel/Development/demander/demander-frontend/node_modules/eslint-loader/index.js:182:8)
    at applySyncOrAsync (/Users/pavel/Development/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/pavel/Development/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:268:5)